# libkdon

./: .gitignore  CMakeLists.txt  config.cmake.h  kdon.pc.in  main.c  wscript
include/: kdon.h  kdon_private.h
src/: kdon_array.c  kdon_decode.c  kdon_encode.c  kdon_literal.c  kdon_memory.c  kdon_misc.c  kdon_object.c  kdon_private.c
src/decode/: json.c
src/encode/: json.c  msgpack.c  xml.c  yaml.c
tests/: test_build.c  test_load.c
